# wagtail-resume

./: .gitignore  .gitlab-ci.yml  .pylintrc  .stylelintrc.yaml  LICENSE  MANIFEST.in  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci-cd.yml  lint.yml  release-drafter.yml  release.yml  test.yml
requirements/: dev.txt
tests/: conftest.py  models.py  settings.py  test_localization.py  test_meta.py  test_template.py  test_templatetags.py  test_weasyprint.py  tests.py  urls.py
tests/management/commands/: create_sample_resume.py
tests/migrations/: 0001_initial.py
tests/templates/tests/: custom_resume_page.html
wagtail_resume/: apps.py  blocks.py  models.py  signals.py  urls.py  views.py
wagtail_resume/locale/sv/LC_MESSAGES/: django.po
wagtail_resume/migrations/: 0001_initial.py  0002_auto_20191209_2007.py  0002_auto_20191227_0916.py  0003_auto_20191210_0939.py  0003_auto_20200110_1525.py  0004_auto_20191210_1057.py  0004_auto_20200110_1656.py  0005_auto_20200227_1224.py  0006_alter_baseresumepage_social_links.py  0007_baseresumepage_pdf_generation_visibility.py  0008_auto_20220211_1557.py  0009_alter_baseresumepage_pdf_generation_visibility.py  0010_alter_baseresumepage_resume_and_more.py  0011_baseresumepage_about_icon_and_more.py  0012_alter_baseresumepage_resume.py  0013_alter_baseresumepage_resume.py  0014_baseresumepage_display_last_update.py
wagtail_resume/static/wagtail_resume/css/: academic_resume_page.css  resume_page.css
wagtail_resume/templates/wagtail_resume/: academic_resume_page.html  localization_dropdown.html  resume_page.html  resume_page_body.html  resume_page_head.html
wagtail_resume/templates/wagtail_resume/blocks/: contributions_block.html  education_block.html  work_experience_block.html  writings_block.html
wagtail_resume/templatetags/: wagtail_resume_extras.py
