[tool.poetry]
name = "wagtail-resume"
authors = ["Adin Hodovic <hodovicadin@gmail.com>"]
license = "MIT"
version = "2.1.1"
readme = "README.md"
homepage = "https://github.com/adinhodovic/wagtail-resume"
repository = "https://github.com/adinhodovic/wagtail-resume"
documentation = "https://github.com/adinhodovic/wagtail-resume"
description = "A Wagtail project made to simplify creation of resumes for developers."
keywords = [
  "Resume",
  "Django",
  "Wagtail",
  "CMS"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Wagtail",
  "Framework :: Wagtail :: 3",
  "Framework :: Wagtail :: 4",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.0 || ^4.0.0"
wagtail = "^3.0.0 || ^4.0.0"
wagtail-markdown = "^0.10"
wagtail-metadata = "^3.0.0 || ^4.0.0"
weasyprint = "^52"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "5.5.2"
pylint = "2.12.0"
pylint-django = "2.5.0"
pylint-plugin-utils = "0.7"
tox = "^3.14.3"
coverage = "^5.0.2"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-django = "^3.7.0"
pytest-clarity = "^0.2.0-alpha.1"
pytest-mock = "^3.0.0"
django-stubs = "^1.5.0"
django-model-utils = "^4.0.0"
django-extensions = "^2.2.9"
jedi = "^0.17.0"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
skip_glob = "**/migrations/*.py,**/fixtures/*.py"
# https://github.com/psf/black/issues/251#issuecomment-535187912
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
exclude = ".*(venv|virtualenv|migrations|.db|.poetry|.poetry-cache|.tox)"
