[tool.poetry]
name = "wagtail-resume"
authors = ["Adin Hodovic <hodovicadin@gmail.com>"]
license = "MIT"
version = "2.4.1"
readme = "README.md"
homepage = "https://github.com/adinhodovic/wagtail-resume"
repository = "https://github.com/adinhodovic/wagtail-resume"
documentation = "https://github.com/adinhodovic/wagtail-resume"
description = "A Wagtail project made to simplify creation of resumes for developers."
keywords = [
  "Resume",
  "Django",
  "Wagtail",
  "CMS"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Wagtail",
  "Framework :: Wagtail :: 4",
  "Framework :: Wagtail :: 5",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.0 || ^4.0.0"
wagtail = "^4.0.0 || ^5.0.0"
wagtail-markdown = "^0.10 || ^0.11"
wagtail-metadata = "^3.0.0 || ^4.0.0"
weasyprint = "^52"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "5.5.2"
pylint-plugin-utils = "0.7"
tox = "^3.14.3"
coverage = "^5.0.2"
django-stubs = "^1.5.0"
django-model-utils = "^4.0.0"
django-extensions = "^2.2.9"
jedi = "^0.19.1"
mypy = "^0.910"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
pytest = "^7.4.2"
pytest-cov = "^2.8.1"
pytest-django = "^4.5.2"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.0.0"
djlint = "^1.34.0"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ds=tests.settings"
python_files = "tests.py test_*.py"
norecursedirs = "node_modules .venv"

[tool.isort]
skip_glob = "**/migrations/*.py,**/fixtures/*.py,infra/**/*.py"
# https://github.com/psf/black/issues/251#issuecomment-535187912
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = [".venv","migrations.*"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
django-settings-module = "tests.settings"
ignore = "migrations"

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-docstring,invalid-name"
