[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wagtail-resume"
authors = ["Adin Hodovic <hodovicadin@gmail.com>"]
license = "MIT"
version = "2.10.1"
readme = "README.md"
homepage = "https://github.com/adinhodovic/wagtail-resume"
repository = "https://github.com/adinhodovic/wagtail-resume"
documentation = "https://github.com/adinhodovic/wagtail-resume"
description = "A Wagtail project made to simplify creation of resumes for developers."
keywords = ["Resume", "Django", "Wagtail", "CMS"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Wagtail",
  "Framework :: Wagtail :: 4",
  "Framework :: Wagtail :: 5",
  "Framework :: Wagtail :: 6",
  "Framework :: Wagtail :: 7",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10 || ^3.11 || 3.12"
Django = "^3.2.0 || ^4.0.0 || ^5.0.0"
wagtail = "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
wagtail-markdown = "^0.10 || ^0.11 || ^0.12 || ^0.13"
wagtail-metadata = "^4.0.0 || ^5.0.0"
weasyprint = "^59 || ^60 || ^61"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "5.5.2"
pylint-plugin-utils = "0.8.2"
tox = "^3.14.3"
coverage = "^5.0.2"
django-stubs = "^1.5.0"
django-model-utils = "^4.0.0"
django-extensions = "^2.2.9"
jedi = "^0.19.1"
mypy = "^0.910"
pylint = "^3.3.7"
pylint-django = "^2.6.1"
pytest = "^7.4.2"
pytest-cov = "^2.8.1"
pytest-django = "^4.5.2"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.0.0"
djlint = "^1.34.0"
pudb = "^2022.1.3"


[tool.pytest.ini_options]
addopts = "--ds=tests.settings --reuse-db --pdbcls=pudb.debugger:Debugger"
python_files = "tests.py test_*.py"
norecursedirs = ".git */migrations/* */static/* venv .venv .poetry .virtualenv node_modules"

[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|.poetry|migrations|node_modules|.tox)"

[tool.isort]
skip_glob = "**/migrations/*.py,**/fixtures/*.py,infra/**/*.py"
# https://github.com/psf/black/issues/251#issuecomment-535187912
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = [".venv", "migrations.*"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
ignore = "manage.py"

[tool.pylint.'FORMAT']
max-line-length = 150

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-docstring,invalid-name,logging-fstring-interpolation,fixme,duplicate-code"

[tool.pylint.'DESIGN']
max-parents = 13

[tool.pylint.'SIMILARITIES']
# Minimum lines number of a similarity.
min-similarity-lines = 4
# Ignore comments when computing similarities.
ignore-comments = "yes"
# Ignore docstrings when computing similarities.
ignore-docstrings = "yes"
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"
