[metadata]
name = wagtail-resume
version = attr: wagtail_resume.__version__
description =  Wagtail resumes for developers
long_description = file: README.md
long_description_content_type = text/markdown
author = Dani Hodovic
author_email = hodovic.dani@gmail.com
url = https://github.com/danihodovic/wagtail-resume
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
project_urls =
    Documentation = https://github.com/danihodovic/wagtail-resume
    Source = https://github.com/danihodovic/wagtail-resume
    Tracker = https://github.com/danihodovic/wagtail-resume/issues


[options]
packages = find:
include_package_data = true
install_requires =
    wagtail-markdown
    wagtail>=2
    wagtail-metadata>=2
keywords =
    django
    wagtail
    resume

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = --ds=tests.settings --reuse-db -ra
DJANGO_SETTINGS_MODULE = tests.settings
testpaths = tests
norecursedirs = .git */migrations/* */static/* .venv

[tool:isort]
recursive=True
skip=venv
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
forced_separate=tests, wagtail-resume
line_length=88
