[metadata]
name = wagtail-resume
version = attr: wagtail_resume.__version__
description =  Wagtail-resume is a reusable Wagtail model for creating a resume.
long_description = file: README.md
long_description_content_type = text/markdown
author = Adin Hodovic
author_email = hodovicadin@gmail.com
url = https://github.com/adinhodovic/wagtail-resume
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Documentation = https://github.com/adinhodovic/wagtail-resume
    Source = https://github.com/adinhodovic/wagtail-resume
    Tracker = https://github.com/adinhodovic/wagtail-resume/issues


[options]
packages = find:
include_package_data = true
install_requires =
    wagtail-markdown
    wagtail>=2
    wagtail-metadata>=2
keywords =
    django
    wagtail
    resume

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = --ds=tests.settings --reuse-db -ra
DJANGO_SETTINGS_MODULE = tests.settings
testpaths = tests
norecursedirs = .git */migrations/* */static/* .venv

[tool:isort]
recursive=True
skip=venv
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
forced_separate=tests, wagtail-resume
line_length=88

[tool:coverage:run]
branch = True
source = wagtail_resume

[tool:coverage:report]
fail_under = 95
